--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-e git+https://github.com/18F/pyfpds.git#egg=pyfpds
 -e git://github.com/django/django.git@78bff08341cfd5b729697c13a7478e83726782d1#egg=django_1.7c1
 django-hstore==1.2.3
 psycopg2==2.5.3
