--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
--e git://github.com/django/django.git@78bff08341cfd5b729697c13a7478e83726782d1#egg=Django-dev
+-e git://github.com/django/django.git@78bff08341cfd5b729697c13a7478e83726782d1#egg=django_1.7c1
+-e git+https://github.com/18F/pyfpds.git#egg=pyfpds
 PyYAML==3.11
 boto==2.34.0
 coverage==3.7.1
@@ -9,6 +10,5 @@ djangorestframework==2.3.14
 psycopg2==2.5.3
 pytz==2014.4
 requests==2.3.0
-selenium==2.43.0
 titlecase==0.7.1
 xmltodict==0.9.0
