cloud foundry deploy files

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ requests==2.3.0
 titlecase==0.7.1
 xmltodict==0.9.0
 markdown==2.5.2
+
+whitenoise==1.0.6  #manages static assets
+dj-database-url==0.3.0 #grabs environment variables and dumps them into a Django settings file
+waitress==0.8.9 #a pure python WSGI server that is a replacement for gunicorn
