--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git://github.com/django/django.git@78bff08341cfd5b729697c13a7478e83726782d1#egg=django_1.7c1
+django==1.7
 -e git+https://github.com/18F/pyfpds.git#egg=pyfpds
 PyYAML==3.11
 boto==2.34.0
@@ -16,3 +16,4 @@ markdown==2.5.2
 whitenoise==1.0.6  #manages static assets
 dj-database-url==0.3.0 #grabs environment variables and dumps them into a Django settings file
 waitress==0.8.9 #a pure python WSGI server that is a replacement for gunicorn
+-e git+https://github.com/jschneier/django-storages.git#egg=django-storages
