--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,4 @@ whitenoise==1.0.6  #manages static assets
 dj-database-url==0.3.0 #grabs environment variables and dumps them into a Django settings file
 waitress==0.8.9 #a pure python WSGI server that is a replacement for gunicorn
 django-storages==1.1.8
+dj-database-url==0.3.0
