Adding the contract tests to the circleci test configuration.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
           name: Run tests
           command: |
             source venv/bin/activate
-            python manage.py test api
+            python manage.py test api contract
 
       - store_artifacts:
           path: logs
