--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
           command: |
             virtualenv venv
             source venv/bin/activate
-            pip install -r requirements.txt
-            pip install -r requirements-test.txt
+            yes | pip install -r requirements.txt
+            yes | pip install -r requirements-test.txt
       - save_cache:
           paths:
             - ./venv
