--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 django==1.7.6
--e git+https://github.com/adrianwebb/pyfpds.git@fixes#egg=pyfpds
+-e git+https://github.com/PSHCDevOps/pyfpds.git@integration#egg=pyfpds
 PyYAML==3.11
 boto==2.34.0
 coverage==3.7.1
