--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
           name: Run tests
           command: |
             source venv/bin/activate
-            python manage.py test api contract
+            python manage.py test api vendors contract
 
       - store_artifacts:
           path: logs
