--- a/manifest-develop.yml
+++ b/manifest-develop.yml
@@ -10,29 +10,34 @@ applications:
   disk_quota: 1G
   timeout: 180
   services:
+    - discovery-config
     - discovery-db
     - discovery-redis
 - name: discovery-celery
   path: .
   no-route: true
+  health-check-type: process
   buildpack: https://github.com/cloudfoundry/python-buildpack
-  command: python manage.py runserver --insecure 0.0.0.0:$PORT & celery -A discovery worker --loglevel=info --concurrency=1
+  command: celery -A discovery worker --loglevel=info --concurrency=1
   instances: 1
   memory: 832M
   disk_quota: 1G
   timeout: 180
   services:
+    - discovery-config
     - discovery-db
     - discovery-redis
 - name: discovery-celery-beat
   path: .
   no-route: true
+  health-check-type: process
   buildpack: https://github.com/cloudfoundry/python-buildpack
-  command: python manage.py runserver --insecure 0.0.0.0:$PORT & celery -A discovery beat --loglevel=info
+  command: celery -A discovery beat --loglevel=info
   instances: 1
   memory: 64M
   disk_quota: 1G
   timeout: 180
   services:
+    - discovery-config
     - discovery-db
     - discovery-redis
