--- a/.cfignore
+++ b/.cfignore
@@ -1,15 +1,15 @@
 pyfpds
 *.swp
 local_settings.py
-*.pyc
-venv
 *.DS_Store
 **.log
 logs/*.log
+logs/*.csv
 .vagrant/
+mvenv/
 venv/
 src/
-mvenv/
+*.pyc
 .coverage
 *.sql
 *.sql.gz
