--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@
 #
 version: 2
 jobs:
-  build:
+  test:
     docker:
       - image: circleci/python:2.7
       - image: circleci/postgres:9.3
@@ -20,36 +20,26 @@ jobs:
 
       - restore_cache:
           keys:
-            - 2-python-dep-{{ checksum "requirements.txt" }}-{{ checksum "requirements-test.txt" }}
-            - 2-python-dep-{{ checksum "requirements.txt" }}
-            - 2-python-dep-
+            - 3-python-dep-{{ checksum "requirements.txt" }}-{{ checksum "requirements-test.txt" }}
+            - 3-python-dep-{{ checksum "requirements.txt" }}
+            - 3-python-dep-
       - run:
           name: Install Python dependencies
           command: |
-            virtualenv venv
-            source venv/bin/activate
-            pip install -r requirements.txt
-            pip install -r requirements-test.txt
+            bash scripts/setup-python.sh
       - save_cache:
           paths:
             - ./venv
-          key: 2-python-dep-{{ checksum "requirements.txt" }}-{{ checksum "requirements-test.txt" }}
+          key: 3-python-dep-{{ checksum "requirements.txt" }}-{{ checksum "requirements-test.txt" }}
 
       - restore_cache:
-          key: 1-phantomjs-2-1-1
-      - run:
-          name: Install PhantomJS dependencies
-          command: |
-            [ -f /usr/local/bin/phantomjs ] || sudo apt-get update
-            [ -f /usr/local/bin/phantomjs ] || sudo apt-get install -y fontconfig wget
+          key: 2-phantomjs-2-1-1
       - run:
           name: Install PhantomJS
           command: |
-            [ -f /usr/local/bin/phantomjs ] || wget -O /tmp/phantomjs.tar.bz2 https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2
-            [ -f /usr/local/bin/phantomjs ] || tar -xjf /tmp/phantomjs.tar.bz2 -C /tmp
-            [ -f /usr/local/bin/phantomjs ] || mv /tmp/phantomjs-2.1.1-linux-x86_64/bin/phantomjs venv/bin/phantomjs
+            bash scripts/setup-phantomjs.sh
       - save_cache:
-          key: 1-phantomjs-2-1-1
+          key: 2-phantomjs-2-1-1
           paths:
             - venv/bin/phantomjs
 
@@ -67,3 +57,35 @@ jobs:
       - store_artifacts:
           path: logs
           destination: test-reports
+
+  deploy-dev:
+    docker:
+      - image: circleci/python:2.7
+        environment:
+          LOGIN_URL: 'https://api.fr.cloud.gov'
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      - run:
+          name: Setup CloudFoundry client CLI
+          command: |
+            bash scripts/setup-cf.sh
+
+      - run:
+          name: Deploy development applications
+          command: |
+            bash scripts/deploy-dev.sh
+
+workflows:
+  test-and-deploy:
+    jobs:
+      - test
+      - deploy-dev:
+          requires:
+            - test
+          filters:
+            branches:
+              only: cloud
