Prefixing deployment related variable names with CF in the CircleCI configuration.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
     docker:
       - image: circleci/python:2.7
         environment:
-          LOGIN_URL: 'https://api.fr.cloud.gov'
+          CF_LOGIN_URL: 'https://api.fr.cloud.gov'
 
     working_directory: ~/repo
 
@@ -94,7 +94,7 @@ jobs:
     docker:
       - image: circleci/python:2.7
         environment:
-          LOGIN_URL: 'https://api.fr.cloud.gov'
+          CF_LOGIN_URL: 'https://api.fr.cloud.gov'
 
     working_directory: ~/repo
 
