--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,53 @@
 #
 version: 2
 jobs:
-  test:
+  unit-tests:
+    docker:
+      - image: circleci/python:2.7
+      - image: circleci/postgres:9.3
+        environment:
+          POSTGRES_DB: circle-test
+          POSTGRES_USER: circleci
+          POSTGRES_PASSWORD: circleci
+
+    working_directory: ~/repo
+
+    steps:
+      - restore_cache:
+          key: v1-source-{{ .Branch }}-{{ .Revision }}
+      - checkout
+      - save_cache:
+          key: v1-source-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - ~/.git
+
+      - restore_cache:
+          key: v5-python-dep-{{ checksum "requirements.txt" }}-{{ checksum "requirements-test.txt" }}
+      - run:
+          name: Install Python dependencies
+          command: |
+            bash -c "sudo scripts/setup-python.sh /dev/stderr ~/venv"
+      - save_cache:
+          key: v5-python-dep-{{ checksum "requirements.txt" }}-{{ checksum "requirements-test.txt" }}
+          paths:
+            - ~/venv
+
+      - run:
+          name: Set CircleCI configuration
+          command: |
+            cp discovery/local_settings.circle.py discovery/local_settings.py
+
+      - run:
+          name: Run unit tests
+          command: |
+            source ~/venv/bin/activate
+            ~/venv/bin/python manage.py test api vendors contract
+
+      - store_artifacts:
+          path: logs
+          destination: unit-test-reports
+
+  acceptance-tests:
     docker:
       - image: circleci/python:2.7
       - image: circleci/postgres:9.3
@@ -54,14 +100,23 @@ jobs:
             cp discovery/local_settings.circle.py discovery/local_settings.py
 
       - run:
-          name: Run tests
+          name: Import fixtures and run test server
+          background: true
           command: |
             source ~/venv/bin/activate
-            ~/venv/bin/python manage.py test api vendors contract
+            scripts/init-server.sh /dev/stderr
+            scripts/load-fixtures.sh
+            ~/venv/bin/waitress-serve --expose-tracebacks --port=8080 discovery.wsgi:application
+
+      - run:
+          name: Run acceptance tests
+          command: |
+            source ~/venv/bin/activate
+            ~/venv/bin/python manage.py selenium_tests
 
       - store_artifacts:
           path: logs
-          destination: test-reports
+          destination: acceptance-test-reports
 
   deploy-dev:
     docker:
@@ -121,16 +176,19 @@ workflows:
   version: 2
   test-and-deploy:
     jobs:
-      - test
+      - unit-tests
+      - acceptance-tests
       - deploy-dev:
           requires:
-            - test
+            - unit-tests
+            - acceptance-tests
           filters:
             branches:
               only: develop
       - deploy-prod:
           requires:
-            - test
+            - unit-tests
+            - acceptance-tests
           filters:
             branches:
               only: master
