Updating the CircleCI configuration with timeout adjustments in the acceptance-tests job.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
           command: |
             source ~/venv/bin/activate
             git submodule update --init --recursive
-            scripts/wait-for-it/wait-for-it.sh --host="localhost" --port="8080"
+            scripts/wait-for-it/wait-for-it.sh --host="localhost" --port=8080 --timeout=300
             ~/venv/bin/python manage.py test selenium_tests
 
       - store_artifacts:
