--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,10 @@ jobs:
 
   acceptance-tests:
     docker:
-      - image: circleci/python:2.7
+      - image: circleci/python:2.7-browsers
+        environment:
+          BASH_ENV: ~/.bashrc
+
       - image: circleci/postgres:9.3
         environment:
           POSTGRES_DB: circle-test
@@ -64,6 +67,8 @@ jobs:
     working_directory: ~/repo
 
     steps:
+      - run: echo 'export PATH=~/venv/bin:$PATH' >> $BASH_ENV
+
       - restore_cache:
           key: v1-source-{{ .Branch }}-{{ .Revision }}
       - checkout
