--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
 
   acceptance-tests:
     docker:
-      - image: circleci/python:2.7-browsers
+      - image: circleci/python:2.7
       - image: circleci/postgres:9.3
         environment:
           POSTGRES_DB: circle-test
@@ -105,6 +105,7 @@ jobs:
           command: |
             source ~/venv/bin/activate
             scripts/init-server.sh /dev/stderr
+            scripts/load-fixtures.sh
             ~/venv/bin/waitress-serve --expose-tracebacks --port=8080 discovery.wsgi:application
 
       - run:
@@ -113,7 +114,6 @@ jobs:
             source ~/venv/bin/activate
             git submodule update --init --recursive
             scripts/wait-for-it/wait-for-it.sh --host="localhost" --port=8080 --timeout=300
-            scripts/load-fixtures.sh
             ~/venv/bin/python manage.py test selenium_tests
 
       - store_artifacts:
