--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,16 +54,22 @@ jobs:
 
   acceptance-tests:
     docker:
-      - image: circleci/python:2.7
+      - image: python:2.7-slim-jessie
+        environment:
+          BASH_ENV: ~/.bashrc
+          PYTHONUNBUFFERED: 1
+
       - image: circleci/postgres:9.3
         environment:
           POSTGRES_DB: circle-test
           POSTGRES_USER: circleci
           POSTGRES_PASSWORD: circleci
 
-    working_directory: ~/repo
+    working_directory: /var/local
 
     steps:
+      - run: echo 'export PATH=/venv/bin:$PATH' >> $BASH_ENV
+
       - restore_cache:
           key: v1-source-{{ .Branch }}-{{ .Revision }}
       - checkout
@@ -77,22 +83,22 @@ jobs:
       - run:
           name: Install Python dependencies
           command: |
-            bash -c "sudo scripts/setup-python.sh /dev/stderr ~/venv"
+            bash -c "scripts/setup-python.sh /dev/stderr"
       - save_cache:
           key: v5-python-dep-{{ checksum "requirements.txt" }}-{{ checksum "requirements-test.txt" }}
           paths:
-            - ~/venv
+            - /venv
 
       - restore_cache:
           key: v4-phantomjs-2-1-1
       - run:
           name: Install PhantomJS
           command: |
-            bash -c "sudo scripts/setup-phantomjs.sh /dev/stderr ~/venv/bin"
+            bash -c "scripts/setup-phantomjs.sh /dev/stderr"
       - save_cache:
           key: v4-phantomjs-2-1-1
           paths:
-            - ~/venv/bin/phantomjs
+            - /usr/local/bin/phantomjs
 
       - run:
           name: Set CircleCI configuration
@@ -103,18 +109,18 @@ jobs:
           name: Import fixtures and run test server
           background: true
           command: |
-            source ~/venv/bin/activate
+            source /venv/bin/activate
             scripts/init-server.sh /dev/stderr
             scripts/load-fixtures.sh
-            ~/venv/bin/waitress-serve --expose-tracebacks --port=8080 discovery.wsgi:application
+            waitress-serve --expose-tracebacks --port=8080 discovery.wsgi:application
 
       - run:
           name: Run acceptance tests
           command: |
-            source ~/venv/bin/activate
+            source /venv/bin/activate
             git submodule update --init --recursive
             scripts/wait-for-it/wait-for-it.sh --host="localhost" --port=8080 --timeout=300
-            ~/venv/bin/python manage.py test selenium_tests
+            python manage.py test selenium_tests
 
       - store_artifacts:
           path: logs
