--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ jobs:
           name: Install Git
           command: |
             apt-get update
-            apt-get install git
+            apt-get install -y git
 
       - restore_cache:
           key: d1-source-{{ .Branch }}-{{ .Revision }}
