--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,7 +21,7 @@ WORKDIR /discovery
 #
 COPY ./scripts/setup-python.sh /usr/local/discovery/bin/setup-python.sh
 COPY ./requirements.txt /usr/local/discovery/requirements.txt
-COPY ./requirements-test.txt /usr/local/discovery/requirements-test.txt
+COPY ./requirements-dev.txt /usr/local/discovery/requirements-dev.txt
 
 RUN /usr/local/discovery/bin/setup-python.sh /dev/stderr \
     && rm -rf /tmp/*
