Adding .ssh folder creation in the Dockerfile so it can be owned by root if made a volume.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,6 +17,11 @@ VOLUME /discovery
 WORKDIR /discovery
 
 #
+# SSH configuration
+#
+RUN mkdir /root/.ssh
+
+#
 # Application requirements
 #
 COPY ./scripts/setup-python.sh /usr/local/discovery/bin/setup-python.sh
