Adding .ssh and .gitconfig files to the shared volumes in the base docker-compose configuration.

--- a/docker/docker-compose.base.yml
+++ b/docker/docker-compose.base.yml
@@ -14,6 +14,8 @@ services:
       - django-env.vars
     volumes:
       - ..:/discovery
+      - ~/.ssh:/root/.ssh
+      - ~/.gitconfig:/root/.gitconfig
     environment:
       # What CloudFoundry gives us...
       DATABASE_URL: postgres://oasis:oasis@discovery-postgresql:5432/oasis
