--- a/docker/docker-compose.base.yml
+++ b/docker/docker-compose.base.yml
@@ -14,10 +14,7 @@ services:
       - django-env.vars
     volumes:
       - ..:/discovery
-      - ~/.ssh:/root/.ssh
-      - ~/.gitconfig:/root/.gitconfig
-      - ~/.bashrc:/root/.bashrc
-      - ~/.profile:/root/.profile
+      - ~:/root
     environment:
       # What CloudFoundry gives us...
       DATABASE_URL: postgres://oasis:oasis@discovery-postgresql:5432/oasis
