--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,6 +166,42 @@ jobs:
           command: |
             scripts/deploy-prod.sh
 
+  deploy-docs:
+    docker:
+      - image: python:2.7-slim-stretch
+        environment:
+          PYTHONUNBUFFERED: 1
+
+    working_directory: /var/local
+
+    steps:
+      - run: echo 'export PATH=/venv/bin:$PATH' >> $BASH_ENV
+
+      - run:
+          name: Install Git
+          command: |
+            apt-get update
+            apt-get install -y git
+
+      - checkout
+
+      - run:
+          name: Install Python dependencies
+          command: |
+            scripts/setup-python.sh /dev/stderr
+
+      - run:
+          name: Deploy documentation
+          command: |
+            source /venv/bin/activate
+            git config user.name "CircleCI ( ${CIRCLE_USERNAME} )"
+            git config user.email "${CIRCLE_USERNAME}@${CIRCLE_BRANCH}"
+            scripts/update-docs.sh "${CIRCLE_BRANCH}"
+
+      - store_artifacts:
+          path: logs
+          destination: docs-reports
+
 workflows:
   version: 2
   test-and-deploy:
@@ -186,3 +222,12 @@ workflows:
           filters:
             branches:
               only: master
+      - deploy-docs:
+          requires:
+            - unit-tests
+            - acceptance-tests
+          filters:
+            branches:
+              only:
+                - master
+                - docs
