Fixing git config calls in the CircleCI configuration.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,8 +194,8 @@ jobs:
           name: Deploy documentation
           command: |
             source /venv/bin/activate
-            git config user.name "CircleCI ( ${CIRCLE_USERNAME} )"
-            git config user.email "${CIRCLE_USERNAME}@${CIRCLE_BRANCH}"
+            git config --global user.name "CircleCI ( ${CIRCLE_USERNAME} )"
+            git config --global user.email "${CIRCLE_USERNAME}@${CIRCLE_BRANCH}"
             scripts/update-docs.sh "${CIRCLE_BRANCH}"
 
       - store_artifacts:
