Updating the home volume share in the base docker-compose configuration to fix permissions issues.

--- a/docker/docker-compose.base.yml
+++ b/docker/docker-compose.base.yml
@@ -14,7 +14,7 @@ services:
       - django-env.vars
     volumes:
       - ..:/discovery
-      - ~:/root
+      - /usr/local/discovery-docker-root:/root
     environment:
       # What CloudFoundry gives us...
       DATABASE_URL: postgres://oasis:oasis@discovery-postgresql:5432/oasis
